fix: add overflow hidden to vertical and styles in check icon

--- a/css/style.sass
+++ b/css/style.sass
@@ -41,6 +41,7 @@
 
 @mixin scroll-wrapper
     overflow-x: scroll
+    overflow-y: hidden
     scroll-behavior: smooth
     scroll-snap-type: x mandatory
     -ms-overflow-style: none
@@ -1249,6 +1250,13 @@ a
                         @include mobile
                             letter-spacing: -0.44px
                             margin: 0 0 4px 0
+                            width: 150px
+                            white-space: nowrap
+                            overflow: hidden
+                            text-overflow: ellipsis
+                            -moz-text-overflow: ellipsis
+                            -o-text-overflow: ellipsis
+                            -ms-text-overflow: ellipsis
                     .press-item-logo
                         display: block
                         margin-bottom: 9px
@@ -1355,7 +1363,6 @@ a
                 .contact-form-item-benefits
                     font-size: 18px
                     line-height: 2.17
-                    color: #f6f3ff
                     padding: 30px 30px 0 30px
                     border-right: 1px solid #a3c7fa
                     @include tablet
@@ -1371,6 +1378,8 @@ a
                         display: block
                     @include mobile
                         display: block
+                .contact-form-item-check
+                    color: #f6f3ff
                 .contact-form-item-form
                     padding: 30px 30px 0 30px
                     box-sizing: border-box
